# midas-arm

./: README.md
src/Midas_robot_description/: CMakeLists.txt  package.xml
src/Midas_robot_description/Midas-Robot/: 17-motor-mount.part  17-motor-mount.stl  17he19-2004s.part  17he19-2004s.stl  17hs08-1004s.part  17hs08-1004s.stl  23-motor_mount.part  23-motor_mount.stl  23hs22-2804s.part  23hs22-2804s.stl  bottom_cover.part  bottom_cover.stl  carrier.part  carrier.stl  composite_part_1.part  composite_part_1.stl  config.json  flange2.part  flange2.stl  horizontal_mount-17.part  horizontal_mount-17.stl  j6_mount.part  j6_mount.stl  planet.part  planet.stl  platform.part  platform.stl  ring.part  ring.stl  robot.sdf  robot.urdf  rotator.part  rotator.stl  sun.part  sun.stl  top_cover.part  top_cover.stl  upperarm.part  upperarm.stl
src/midas_arm_config/: .setup_assistant  CMakeLists.txt  package.xml
src/midas_arm_config/config/: Midas.ros2_control.xacro  Midas.srdf  Midas.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/midas_arm_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/moveit2_custom_paths/: CMakeLists.txt  package.xml
src/moveit2_custom_paths/include/moveit2_custom_paths/: cartesian_paths.h  custom_paths.h  midas_controller.h
src/moveit2_custom_paths/launch/: midas_controller.launch.py
src/moveit2_custom_paths/src/: cartesian_paths.cpp  cartesian_paths_node.cpp  midas_controller.cpp  midas_controller_node.cpp  publish_path_test.cpp
